# gpt_eval

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/JE/: replication_anthropic_embeddings.ipynb
